# NeuWob

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
apps/: bem_test.cu  depth_test.cu  full_boundary_test.cu  grid_test.cu  main.cu  possion_test.cu  potential_test.cu  single_boundary_test.cu
data/: test.json
include/: common.h  estimator.h  gpu_memory.h  grid.h  multipole.h  scene.h  ui.h
python_scripts/: check_neighbor_points.py  check_sample_points.py  test.py
src/: scene.cu  ui.cu
